# lockstep

./: .gitignore  Cargo.toml  RustConfig  package-lock.json  package.json  readme.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: connection.rs  interval.rs  latency_buffer.rs  lib.rs  main.rs  renderer.rs
nbody/: Cargo.toml
nbody/benches/: simulation.rs
nbody/src/: lib.rs
pkg/: index.d.ts  index_bg.d.ts  index_bg.js  index_bg.wasm  package.json
renderer/: Cargo.toml
renderer/examples/: main.rs
renderer/resources/: instanced.glsl
renderer/src/: bindings.rs  grid.rs  instanced.glsl  lib.rs  line_buffer.rs  main.rs  shader.glsl  sphere_geometry.rs
server/: Cargo.toml
server/public/: index.html
server/src/: main.rs
shared/: Cargo.toml
shared/src/: input_buffer.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
