[package]
name = "client"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcDataChannelInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelType",
    "RtcDataChannelEvent",
    "RequestInit",
    "Request",
    "Response",
    "Window",
    "RtcDataChannelState",
]