[package]
name = "client"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
shared = { path = "../shared" }
serde-wasm-bindgen = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
crossbeam-channel = "0.4"

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcDataChannelInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcDataChannel",
    "RtcDataChannelType",
    "RtcDataChannelEvent",
    "RequestInit",
    "Request",
    "Response",
    "Window",
    "RtcDataChannelState",
]