[package]
name = "nbody"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
fixed = "1.2"
nalgebra = { version = "0.22", features = ["serde-serialize"] }

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
rand = "0.7"