[package]
name = "nbody"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fixed = { version = "1.2", features = ["serde"] }
fixed-sqrt = "0.2"
nalgebra = { version = "0.22", features = ["serde-serialize"] }
log = "0.4"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
rand_pcg = "0.2"

[[bench]]
name = "simulation"
harness = false