[package]
name = "renderer"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
graphics = { path = "../../engine-rs/graphics", features = ["derive"] }
env_logger = "0.7"
log = "0.4"
futures = "0.3"
nalgebra = { version = "0.22", features = ["mint"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"