[package]
name = "server"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc-unreliable = { git = "https://github.com/kyren/webrtc-unreliable.git" }
#webrtc-unreliable = { path = "../../webrtc-unreliable" }
shared = { path = "../shared" }
bincode = "1.3"
log = "0.4.11"
env_logger = "0.7"
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
futures-util = "0.3"
warp = "0.2"
bytes = "0.5"