[package]
name = "shared"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.1", features = ["serde-serialize", "wasm-bindgen", "enhanced-determinism"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"