[package]
name = "shared"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbody = { path = "../nbody" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
twox-hash = "1.5"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"